# zethus-demo-backend

./: .gitignore  .style.yapf  Dockerfile  README.md  zethus-demo-backend.rosinstall
.docker/: Dockerfile  id_rsa
zethus_publisher/: CMakeLists.txt  package.xml
zethus_publisher/launch/: point_cloud_publisher.launch  publish_markers.launch  publisher.launch
zethus_publisher/rosbags/: odom_posearray_path.bag  odometry_forklift.bag  panda_tf.bag  pointcloud_turtlebot.bag
zethus_publisher/scripts/: geometry_msgs_publisher.py  marker_publisher.py  markers_demo.py  nav_msgs_publisher.py  sample_publisher.py  sensor_msgs_publisher.py  test.py  tf_republisher.py  visualization_msgs_publisher.py
zethus_publisher/src/: moveit_msgs_publisher.cpp
